--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,11 @@ nose==1.3.7
 django-cors-headers==2.1.0
 django-author==1.0.2
 django-model-utils>=3.1.2
+mistune==0.8.4
 Sphinx>2
 sphinx-py3doc-enhanced-theme>=2.4.0
 recommonmark==0.5.0
+sphinxcontrib-openapi
 django-mysql
 logging_tree
+drf-yasg
