--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ Sphinx>2
 sphinx-py3doc-enhanced-theme>=2.4.0
 recommonmark==0.5.0
 sphinxcontrib-openapi
-django-mysql
+django-mysql==3.12.0
 logging_tree
 drf-yasg
