--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-Django>2.2,<3
-django-nose==1.4.5
-djangorestframework>3.9.1
+Django>3,<4
+djangorestframework==3.14.0
 mysqlclient>1.3.13
-nose==1.3.7
-django-cors-headers==2.1.0
+django-cors-headers==3.13.0
 django-author==1.0.2
 django-model-utils>=3.1.2
 mistune==0.8.4
@@ -11,7 +9,6 @@ Sphinx>2
 sphinx-py3doc-enhanced-theme>=2.4.0
 recommonmark==0.5.0
 sphinxcontrib-openapi
-django-mysql==3.12.0
 logging_tree
-drf-yasg
+drf-yasg>=1.21.4
 natural-keys
