--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Sphinx>2
 sphinx-py3doc-enhanced-theme>=2.4.0
 recommonmark==0.5.0
 sphinxcontrib-openapi
+sphinxcontrib-django
 logging_tree
 drf-yasg>=1.21.4
 natural-keys
