--- a/setup.cfg
+++ b/setup.cfg
@@ -3,4 +3,4 @@ ignore = E221,E126,E501,E241
 [flake8]
 ignore = E221,E126,E501,E241
 [pylint]
-disable =logging-fstring-interpolation,broad-except,line-too-long,bad-continuation,multiple-imports,invalid-name,unused-argument,arguments-differ,wrong-import-position
+disable =logging-fstring-interpolation,broad-exception-raised,broad-exception-caught,line-too-long,bad-continuation,multiple-imports,invalid-name,unused-argument,arguments-differ,wrong-import-position
